--- a/views/index.html
+++ b/views/index.html
@@ -13,7 +13,7 @@
 
 <body>
 	<header>
-		<h1>Sudoku Solver</h1>
+		<h1>Sudoku Solver hola</h1>
 	</header>
 	<div class="container">
 		<div class="form-container">
